# abstract-fork

./: README.md  cabal.project
.github/workflows/: haskell.yml
abstract-fork/: CHANGELOG.md  LICENSE  abstract-fork.cabal
abstract-fork/src/Control/Monad/: Fork.hs
