cabal-version:      3.0
name:               abstract-fork
version:            0.1.0.0
synopsis:           An abstraction for forking threads
-- description:
homepage:           https://www.github.com/parsonsmatt/abstract-fork
license:            MIT
license-file:       LICENSE
author:             parsonsmatt
maintainer:         parsonsmatt@gmail.com
-- copyright:
category:           Concurrency
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Control.Monad.Fork
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >= 4.10 && < 5
      , exceptions
      , unliftio-core
      , ghc-prim
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite abstract-fork-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base 
      , abstract-fork
      , resourcet
      , exceptions
        
